--- a/HTML/WebContent/Project/HTML-CSS/style_2History.css
+++ b/HTML/WebContent/Project/HTML-CSS/style_2History.css
@@ -11,10 +11,15 @@
 	box-sizing : border-box;
 	margin : 0 20px 20px 20px;
 	padding : 20px; 
+	width : 800px;
     text-indent: 10px;
     border : 1px dashed #000;
 }
-
+.main_content img {
+    float: right;
+    width: 300px;
+    margin: 10px;
+}
 
 /*================= Reactive =================*/
 @media screen and (max-width: 1000px) { 
